crates/rattler_installs_packages/src/artifacts/snapshots/rattler_installs_packages__artifacts__sdist__tests__get_whl_for_local_whl.snap
---
source: crates/rattler_installs_packages/src/artifacts/sdist.rs
expression: whl_metadata.1.requires_dist
---
[
    Requirement {
        name: PackageName(
            "click",
        ),
        extras: [],
        version_or_url: Some(
            VersionSpecifier(
                VersionSpecifiers(
                    [
                        VersionSpecifier {
                            operator: GreaterThanEqual,
                            version: "8.0.0",
                        },
                    ],
                ),
            ),
        ),
        marker: true,
        origin: None,
    },
    Requirement {
        name: PackageName(
            "mypy-extensions",
        ),
        extras: [],
        version_or_url: Some(
            VersionSpecifier(
                VersionSpecifiers(
                    [
                        VersionSpecifier {
                            operator: GreaterThanEqual,
                            version: "0.4.3",
                        },
                    ],
                ),
            ),
        ),
        marker: true,
        origin: None,
    },
    Requirement {
        name: PackageName(
            "packaging",
        ),
        extras: [],
        version_or_url: Some(
            VersionSpecifier(
                VersionSpecifiers(
                    [
                        VersionSpecifier {
                            operator: GreaterThanEqual,
                            version: "22.0",
                        },
                    ],
                ),
            ),
        ),
        marker: true,
        origin: None,
    },
    Requirement {
        name: PackageName(
            "pathspec",
        ),
        extras: [],
        version_or_url: Some(
            VersionSpecifier(
                VersionSpecifiers(
                    [
                        VersionSpecifier {
                            operator: GreaterThanEqual,
                            version: "0.9.0",
                        },
                    ],
                ),
            ),
        ),
        marker: true,
        origin: None,
    },
    Requirement {
        name: PackageName(
            "platformdirs",
        ),
        extras: [],
        version_or_url: Some(
            VersionSpecifier(
                VersionSpecifiers(
                    [
                        VersionSpecifier {
                            operator: GreaterThanEqual,
                            version: "2",
                        },
                    ],
                ),
            ),
        ),
        marker: true,
        origin: None,
    },
    Requirement {
        name: PackageName(
            "tomli",
        ),
        extras: [],
        version_or_url: Some(
            VersionSpecifier(
                VersionSpecifiers(
                    [
                        VersionSpecifier {
                            operator: GreaterThanEqual,
                            version: "1.1.0",
                        },
                    ],
                ),
            ),
        ),
        marker: python_full_version < '3.11',
        origin: None,
    },
    Requirement {
        name: PackageName(
            "typed-ast",
        ),
        extras: [],
        version_or_url: Some(
            VersionSpecifier(
                VersionSpecifiers(
                    [
                        VersionSpecifier {
                            operator: GreaterThanEqual,
                            version: "1.4.2",
                        },
                    ],
                ),
            ),
        ),
        marker: python_full_version < '3.8' and implementation_name == 'cpython',
        origin: None,
    },
    Requirement {
        name: PackageName(
            "typing-extensions",
        ),
        extras: [],
        version_or_url: Some(
            VersionSpecifier(
                VersionSpecifiers(
                    [
                        VersionSpecifier {
                            operator: GreaterThanEqual,
                            version: "3.10.0.0",
                        },
                    ],
                ),
            ),
        ),
        marker: python_full_version < '3.10',
        origin: None,
    },
    Requirement {
        name: PackageName(
            "colorama",
        ),
        extras: [],
        version_or_url: Some(
            VersionSpecifier(
                VersionSpecifiers(
                    [
                        VersionSpecifier {
                            operator: GreaterThanEqual,
                            version: "0.4.3",
                        },
                    ],
                ),
            ),
        ),
        marker: extra == 'colorama',
        origin: None,
    },
    Requirement {
        name: PackageName(
            "aiohttp",
        ),
        extras: [],
        version_or_url: Some(
            VersionSpecifier(
                VersionSpecifiers(
                    [
                        VersionSpecifier {
                            operator: GreaterThanEqual,
                            version: "3.7.4",
                        },
                    ],
                ),
            ),
        ),
        marker: extra == 'd',
        origin: None,
    },
    Requirement {
        name: PackageName(
            "ipython",
        ),
        extras: [],
        version_or_url: Some(
            VersionSpecifier(
                VersionSpecifiers(
                    [
                        VersionSpecifier {
                            operator: GreaterThanEqual,
                            version: "7.8.0",
                        },
                    ],
                ),
            ),
        ),
        marker: extra == 'jupyter',
        origin: None,
    },
    Requirement {
        name: PackageName(
            "tokenize-rt",
        ),
        extras: [],
        version_or_url: Some(
            VersionSpecifier(
                VersionSpecifiers(
                    [
                        VersionSpecifier {
                            operator: GreaterThanEqual,
                            version: "3.2.0",
                        },
                    ],
                ),
            ),
        ),
        marker: extra == 'jupyter',
        origin: None,
    },
    Requirement {
        name: PackageName(
            "uvloop",
        ),
        extras: [],
        version_or_url: Some(
            VersionSpecifier(
                VersionSpecifiers(
                    [
                        VersionSpecifier {
                            operator: GreaterThanEqual,
                            version: "0.15.2",
                        },
                    ],
                ),
            ),
        ),
        marker: extra == 'uvloop',
        origin: None,
    },
]
