crates/rattler_installs_packages/src/artifacts/snapshots/rattler_installs_packages__artifacts__sdist__tests__read_zip_metadata.snap
---
source: crates/rattler_installs_packages/src/artifacts/sdist.rs
expression: result.1
---
WheelCoreMetadata {
    name: PackageName {
        source: "filterpy",
        normalized: "filterpy",
    },
    version: "1.4.5",
    metadata_version: MetadataVersion(
        "2.4",
    ),
    requires_dist: [
        Requirement {
            name: PackageName(
                "numpy",
            ),
            extras: [],
            version_or_url: None,
            marker: true,
            origin: None,
        },
        Requirement {
            name: PackageName(
                "scipy",
            ),
            extras: [],
            version_or_url: None,
            marker: true,
            origin: None,
        },
        Requirement {
            name: PackageName(
                "matplotlib",
            ),
            extras: [],
            version_or_url: None,
            marker: true,
            origin: None,
        },
    ],
    requires_python: None,
    extras: {},
}
