crates/rattler_installs_packages/src/artifacts/snapshots/rattler_installs_packages__artifacts__sdist__tests__sdist_metadata.snap
---
source: crates/rattler_installs_packages/src/artifacts/sdist.rs
expression: result.1
---
WheelCoreMetadata {
    name: PackageName {
        source: "rich",
        normalized: "rich",
    },
    version: "13.6.0",
    metadata_version: MetadataVersion(
        "2.4",
    ),
    requires_dist: [
        Requirement {
            name: PackageName(
                "ipywidgets",
            ),
            extras: [],
            version_or_url: Some(
                VersionSpecifier(
                    VersionSpecifiers(
                        [
                            VersionSpecifier {
                                operator: GreaterThanEqual,
                                version: "7.5.1",
                            },
                            VersionSpecifier {
                                operator: LessThan,
                                version: "9",
                            },
                        ],
                    ),
                ),
            ),
            marker: extra == 'jupyter',
            origin: None,
        },
        Requirement {
            name: PackageName(
                "markdown-it-py",
            ),
            extras: [],
            version_or_url: Some(
                VersionSpecifier(
                    VersionSpecifiers(
                        [
                            VersionSpecifier {
                                operator: GreaterThanEqual,
                                version: "2.2.0",
                            },
                        ],
                    ),
                ),
            ),
            marker: true,
            origin: None,
        },
        Requirement {
            name: PackageName(
                "pygments",
            ),
            extras: [],
            version_or_url: Some(
                VersionSpecifier(
                    VersionSpecifiers(
                        [
                            VersionSpecifier {
                                operator: GreaterThanEqual,
                                version: "2.13.0",
                            },
                            VersionSpecifier {
                                operator: LessThan,
                                version: "3.0.0",
                            },
                        ],
                    ),
                ),
            ),
            marker: true,
            origin: None,
        },
        Requirement {
            name: PackageName(
                "typing-extensions",
            ),
            extras: [],
            version_or_url: Some(
                VersionSpecifier(
                    VersionSpecifiers(
                        [
                            VersionSpecifier {
                                operator: GreaterThanEqual,
                                version: "4.0.0",
                            },
                            VersionSpecifier {
                                operator: LessThan,
                                version: "5.0",
                            },
                        ],
                    ),
                ),
            ),
            marker: python_full_version < '3.9',
            origin: None,
        },
    ],
    requires_python: Some(
        VersionSpecifiers(
            [
                VersionSpecifier {
                    operator: GreaterThanEqual,
                    version: "3.7.0",
                },
            ],
        ),
    ),
    extras: {
        Extra {
            source: "jupyter",
            normalized: "jupyter",
        },
    },
}
